--- a/src/LBF/MainBundle/Resources/views/Main/order.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/order.html.twig
@@ -15,10 +15,10 @@
 		</div>
 
 		<div id="fullpage">
-			<div class="section" id="section6">
+			<div class="section section_padding" id="orderSection">
 				<br/><br/>
 
-	            <div id="breadcrumb" class="center row80">
+	            <div id="breadcrumb" class="center row">
 			        <div class="row">
 		              	<h2>
 		                  	{{ 'header.titles.myCart' | trans }}
