--- a/app/Resources/views/includes/modals.html.twig
+++ b/app/Resources/views/includes/modals.html.twig
@@ -5,7 +5,7 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close white" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h2 class="modal-title center" id="qualityModalLabel">
           {{ 'main.titles.qualityProduct' | trans }}
         </h2>
@@ -34,7 +34,9 @@
         </script>
       </div>
       <div class="modal-footer padding0">
-        <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-modal" data-dismiss="modal">
+          {{ 'modal.actions.close' | trans }}
+        </button>
       </div>
     </div>
   </div>
@@ -46,9 +48,9 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close white" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h2 class="modal-title center" id="reservationModalLabel">
-          {{ 'main.titles.securedPayment' | trans }}
+          {{ 'main.titles.reservation' | trans }}
         </h2>
       </div>
       <div class="modal-body">
@@ -76,14 +78,90 @@
         </strong>
         Si vous n'avez pas de compte, il vous suffira d'en créer un rapidement avec un email et un mot de passe !
 
-        <br/><br/>
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio enim asperiores totam quaerat quisquam magni a minima explicabo quod aspernatur iure deserunt, nisi eaque, reiciendis consequuntur quasi laudantium atque voluptas.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quae nisi, temporibus similique ea. Debitis consequuntur excepturi beatae. Autem porro quas consectetur ipsa. Nulla, impedit esse possimus porro. Veritatis, non.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, odio, necessitatibus esse impedit voluptatibus iusto id doloremque accusantium. Sequi dolor, vero. Rem eligendi odio, nobis harum beatae vitae facilis! Repudiandae.
       </div>
       <div class="modal-footer padding0">
-        <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-modal" data-dismiss="modal">
+          {{ 'modal.actions.close' | trans }}
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- 3. Recette en question -->
+<div class="modal bs-example-modal-lg fade" id="recipeModal" tabindex="-1" role="dialog" aria-labelledby="recipeModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close white" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h2 class="modal-title center" id="recipeModalTitle"></h2>
+      </div>
+      <div class="modal-body row" id="recipeModalContent">
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="recipeModalContent_LeftPart">
+            <div class="recipe_border">
+              <div class="left">
+                <span><strong>Provenance :</strong></span> <span id="recipeModalContent_Origin"></span> <br/>
+                <span><strong>Pour :</strong></span> <span id="recipeModalContent_ForHowMany"></span> <span>personnes</span> <br/>
+                <span><strong>Préparation :</strong></span> <span id="recipeModalContent_Duration"></span> <span> MIN</span> <br/>
+                <span><strong>Cuisson :</strong></span> <span id="recipeModalContent_Cooking"></span> <span> MIN</span>
+                <hr/>
+                <strong class="text-decoration:underline;">Ingrédients :</strong>
+                <div id="recipeModalContent_Ingredients">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="recipeModalContent_RightPart">
+            <div class="recipe_border">
+              <strong class="text-decoration:underline;">Préparation :</strong>
+              <div class="left" id="recipeModalContent_Preparation">
+                
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <script type="text/javascript">
+          // $('#recipeModal').modal().on('shown', function(){
+          //     $('body').css('overflow', 'hidden !important');
+          // }).on('hidden', function(){
+          //     $('body').css('overflow', 'auto');
+          // });
+          
+          var height_Left = $('#recipeModalContent_LeftPart').height();
+          var height_Right = $('#recipeModalContent_RightPart').height();
+          if (height_Left > height_Right) {
+            $('#recipeModalContent_RightPart').css({'height':height_Left+'px !important'});
+          }
+          else {
+            $('#recipeModalContent_LeftPart').css({'height':height_Right+'px !important'}); 
+          }
+
+        </script>
+
+
+        <br/><br/>
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 left">
+            <div class="center">
+              <span>Dernière modification: </span> <span id="recipeModalContent_UpdatedAt"></span>
+            </div>
+            <div id="recipeModalContent_PhotoRecipe" class="recipe_img_lg" style="width: 100%; background-size: cover; background-position: 50%;">
+              <script type="text/javascript">
+                var recipe_height_lg = $('.recipe_img_lg').width() * 0.8;
+                $('.recipe_img_lg').css({'height':recipe_height_lg+'px'});
+              </script>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer padding0">
+        <button type="button" class="btn btn-modal" data-dismiss="modal">
+          {{ 'modal.actions.close' | trans }}
+        </button>
       </div>
     </div>
   </div>
